Project supply_v1 {
  database_type: 'PostgreSQL'
  Note: 'Uses pgcrypto extension for gen_random_uuid(). Columns updated_at on suppliers, ingredients, warehouses, and inventories are maintained by update_timestamp_column() trigger.'
}

Table suppliers {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(255) [not null]
  contact_person varchar(255)
  phone varchar(50)
  address text
  status varchar(20) [default: 'active', note: 'CHECK (status IN (\'active\', \'inactive\'))']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz 

  Note: 'updated_at is auto-maintained by trigger update_suppliers_updated_at'
}

Table units {
  id serial [pk]
  name varchar(50) [not null, unique]
  description text
}

Table ingredients {
  id uuid [pk, default: `gen_random_uuid()`]
  sku varchar(50) [not null, unique]
  name varchar(255) [not null]
  unit_id int [ref: > units.id, not null]
  is_perishable boolean [default: false]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  Note: 'updated_at is auto-maintained by trigger update_ingredients_updated_at'
}

Table warehouses {
  id serial [pk]
  name varchar(255) [not null, unique]
  location text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  Note: 'updated_at is auto-maintained by trigger update_warehouses_updated_at'
}

Table inventory_movements {
  id uuid [pk, default: `gen_random_uuid()`]
  warehouse_id int [ref: > warehouses.id, not null]
  ingredient_id uuid [ref: > ingredients.id, not null]
  supplier_id uuid [ref: > suppliers.id, note: 'wajib NULL jika movement_type = OUT']
  movement_type varchar(20) [not null, note: 'CHECK (movement_type IN (\'IN\', \'OUT\', \'ADJUSTMENT\'))']
  quantity numeric(12,2) [not null, note: 'CHECK (quantity > 0)']
  balance_after numeric(12,2) [not null, note: 'CHECK (balance_after >= 0)']
  reference_code varchar(100)
  notes text
  movement_date timestamptz [not null, default: `now()`]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    ingredient_id
    warehouse_id
    supplier_id
    movement_date
  }
  
  Note: 'dilengkapi CHECK (movement_type != \'OUT\' OR supplier_id IS NULL)'
}

Table inventories {
  warehouse_id int [ref: > warehouses.id, not null]
  ingredient_id uuid [ref: > ingredients.id, not null]
  stock_level numeric(12,2) [not null, default: 0, note: 'CHECK (stock_level >= 0)']
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (warehouse_id, ingredient_id) [pk]
  }

  Note: 'updated_at is auto-maintained by trigger update_inventories_updated_at'
}
